[tool.poetry]
name = "tyazhko"
version = "0.1.0"
description = "Link shortener"
authors = ["Alexander Lavrov <internal@egnod.dev>"]
license = "MIT"

packages = [

    { include = "tyazhko", from = "." }

]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
sitri = "^0.7.0"
loguru = "^0.3.2"
cbor2 = "^5.1.2"
ujson = "^3.0.0"
motor = "^2.1.0"
passlib = "^1.7.2"
argon2-cffi = "^20.1.0"
gunicorn = "^20.0.4"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.6.0"
bandit = "^1.6.2"
vulture = "^1.6"
bump2version = "^1.0.0"
uvicorn = "^0.11.8"
ipython = "^7.17.0"

[tool.skjold]
report_only = true
report_format = 'json'
sources = ["pyup", "gemnasium"]
cache_dir = ".skjold_cache"
cache_expires = 43200

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | deploy
  | .bumpversion.cfg
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
